--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "tic-tac-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://chtinahow.github.io/tic-tac-react",
   "devDependencies": {
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "gh-pages": "^0.12.0",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
@@ -16,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "deploy": "npm run build&&gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
